[package]
name = "centipede"
version = "0.2.7"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0.3"

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
features =  ["ec_secp256k1"]
branch = "client_version_2"

[dependencies.bulletproof]
git = "https://github.com/commerceblock/bulletproofs"
branch = "client_version_2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
